--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   equatable: ^2.0.5
   dartz: ^0.10.1
 
+  #firbase 
+  firebase_core: ^1.24.0
+  firebase_auth: ^3.11.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
