--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   #choose file from device
   file_picker: ^5.2.1
 
+  #validate Email
+  email_validator: ^2.1.17
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -72,8 +75,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/logo_sing/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
