--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  bloc: ^8.1.0
+  flutter_bloc: ^8.1.1
   equatable: ^2.0.5
   dartz: ^0.10.1
 
@@ -51,6 +51,11 @@ dependencies:
 
   #validate Email
   email_validator: ^2.1.17
+
+  #check internet 
+  connectivity_plus: ^3.0.0
+  get_it: ^7.2.0
+  flutter_html: ^3.0.0-alpha.6
 
 dev_dependencies:
   flutter_test:
