--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   connectivity_plus: ^3.0.0
   get_it: ^7.2.0
   flutter_html: ^3.0.0-alpha.6
+  date_field: ^3.0.0
+  group_radio_button: ^1.2.0
 
 dev_dependencies:
   flutter_test:
