--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   group_radio_button: ^1.2.0
   flutter_native_splash: ^2.2.10+1
   shared_preferences: ^2.0.15
+  http: ^0.13.5
 
 
 flutter_native_splash:
